# algos

./: CMakeLists.txt  DeployQt.cmd  README.md
forms/: mainwindow.ui  renderarea.ui
include/algorithms/: algorithms_global.h  graph.h  sort.h
include/common/: common.h
include/gui/: algorithms_gui_global.h  mainwindow.h  renderarea.h
src/: graph.cpp  main.cpp
src/gui/: mainwindow.cpp  renderarea.cpp
src/test/: main.cpp
